# owilx-oracle

./: .aider.conf.yml  .env  .env.example  .gitignore  README.md  await self.playwright.stop()  pass  pyproject.toml
src/sports/: config.py
src/sports-betting/: cli.py  config.py
src/sports-betting/data/: ingestion.py  supabase_client.py
src/sports/skill/: base.py  main.py  scraper.py
src/sports/tools/: __init__.py  fixture.py  main.py
